[Qt] Make sure we relayout the page after evaluating JS

Patch by Richard Moore <rich@kde.org> on 2009-09-02
Reviewed by Tor Arne Vestbø.

https://bugs.webkit.org/show_bug.cgi?id=28235

QtWebKit does not always seem to reflow the page when evaluating
javascript. This patch changes the way evaluateJavaScript works to
use the frameloader which ensures that this is done properly.

* Api/qwebframe.cpp:
(QWebFrame::evaluateJavaScript):
* tests/qwebframe/tst_qwebframe.cpp:

Canonical link: https://commits.webkit.org/39539@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47963 268f45cc-cd09-0410-ab3c-d52691b4dbfc