WebKit/qt/tests/qwebframe/tst_qwebframe.cpp
@@ -592,6 +592,7 @@ private slots:
     void hasSetFocus();
     void render();
     void scrollPosition();
+    void evaluateWillCauseRepaint();
 
 private:
     QString  evalJS(const QString&s) {
@@ -2668,6 +2669,25 @@ void tst_QWebFrame::scrollPosition()
     QCOMPARE(x, 23);
     QCOMPARE(y, 29);
 }
+
+void tst_QWebFrame::evaluateWillCauseRepaint()
+{
+    QWebView view;
+    QString html("<html><body>top<div id=\"junk\" style=\"display: block;\">"
+                    "junk</div>bottom</body></html>");
+    view.setHtml(html);
+    view.show();
+
+    QTest::qWait(200);
+
+    view.page()->mainFrame()->evaluateJavaScript(
+        "document.getElementById('junk').style.display = 'none';");
+
+    ::waitForSignal(view.page(), SIGNAL(repaintRequested( const QRect &)));
+
+    QTest::qWait(2000);
+}
+
 
 QTEST_MAIN(tst_QWebFrame)
 #include "tst_qwebframe.moc"
